# vespera

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  DECISIONS.md  Dockerfile  README.md  RUNBOOK.md  SECURITY.md  VALIDATION_SPEC_6.md  alembic.ini  docker-compose.yml  eval_thresholds.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agent/: __init__.py  graph.py  llm_binding.py  state.py  tools.py
app/api/: health.py
app/audit/: __init__.py  handler.py  models.py  routes.py  schemas.py  service.py
app/auth/: __init__.py  backend.py  bootstrap.py  dependencies.py  manager.py  models.py  rate_limit.py  routes_auth.py  routes_staff.py  routes_users.py  schemas.py
app/clients/: __init__.py  accounts.py  enums.py  models.py  routes_client_users.py  routes_clients.py  routes_watchlists.py  schemas.py  service.py  watchlists.py
app/core/: __init__.py  coercion.py  config.py  dependencies.py  dispatcher.py  lifespan.py  startup.py
app/db/: CONVENTIONS.md  __init__.py  base.py  models.py  rls.py
app/delivery/: __init__.py  channels.py  handlers.py  models.py  n8n_client.py  notifications.py  rendering.py  routes.py  service.py  sweep.py
app/domain/: __init__.py  events.py
app/embedding/: __init__.py  chunking.py  document_indexer.py  enums.py  models.py  router.py  routes.py  runner.py  schemas.py  selection.py  service.py  tokenizer.py  triage_trigger.py
app/guardrails/: client.py  egress.py
app/infra/: __init__.py  http.py  llm_adapter.py  modelserver_client.py  redis.py
app/ingestion/: __init__.py  enums.py  identifiers.py  mesh.py  models.py  routes_documents.py  routes_ingestion.py  runner.py  schemas.py  service.py
app/jobs/: __init__.py  context.py  dead_letter.py  dlq.py  enqueue.py  retry.py  scheduler.py  tasks.py
app/observability/: __init__.py  headers.py  logging.py  models.py  pricing.py  routes.py  schemas.py  sentry.py  tracing.py  usage.py
app/prompts/: triage_lowconf_resolve.txt  triage_valence.txt
app/rag/: __init__.py  corroboration.py  fusion.py  query_embed.py  rerank.py  retrieval.py  routes.py  schemas.py  service.py
app/redaction/: __init__.py  recognizers.py  redactor.py
app/reports/: __init__.py  _helpers.py  consolidation.py  drafting.py  enums.py  metrics_routes.py  models.py  passages.py  portal_routes.py  review.py  routes.py  routes_portal.py  runner.py  schemas.py  service.py
app/scheduling/: __init__.py  budget_policy.py  due.py  models.py  routes.py  service.py
app/triage/: __init__.py  classify.py  enums.py  llm.py  models.py  ner.py  prefilter.py  routes.py  routing.py  runner.py  schemas.py  service.py  severity.py  sweep.py
docs/: AI-IMPLEMENTATION-PITFALLS.md  COMPLEXITY.md  DECISIONS.md  FUTURE_IMPROVEMENTS.md  RUNBOOK.md  SECURITY.md  delivery-runbook.md
eval/agent/: report_grounding_golden.jsonl  tool_selection_golden.jsonl
eval/classifier/: bench.py  eval_set.jsonl  run_eval.py
eval/rag/: golden_set.jsonl  run_rag_eval.py
eval/scheduling/: run_due_selection_eval.py
eval/triage/: golden_set.jsonl
frontend/: .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  serve.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: reviewer.spec.ts
frontend/src/: globals.css  main.tsx  routes.tsx
frontend/tests/: accounts.test.tsx  admin.test.tsx  batch.test.tsx  command-palette.test.tsx  portal.test.tsx  reviewer.test.tsx  routing.test.tsx  setup.ts  signin.test.tsx
guardrails/: Dockerfile  __init__.py  main.py  routes.py  schemas.py
guardrails/core/: __init__.py  auth.py  config.py  logging.py  rails.py  startup.py
modelserver/: Dockerfile  RUNBOOK.md  __init__.py  auth.py  config.py  logging.py  main.py  manifest.py  routes.py  schemas.py  startup.py
modelserver/core/: __init__.py  startup.py
modelserver/eval/: __init__.py  bench.py  eval_set.jsonl  run_eval.py
modelserver/inference/: __init__.py  classifier.py  embedder.py  reranker.py  tokenize.py
modelserver/models/: MODEL_CARD.md  classifier.joblib  embedder.onnx  manifest.json  reranker.onnx  tokenizer.json
notebooks/: 01_train_export_modelserver.ipynb  02_train_export_reranker.ipynb
scripts/: check_critical_coverage.py  generate_model_artifacts.py  seed_admin.py  seed_client.py  write_secrets.py
scripts/db/: init-pantera-app-role.sql
specs/001-platform-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auth-and-roles/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-client-watchlist-mgmt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-literature-ingestion/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/004b-staff-and-clients/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-modelserver/: tasks.md
specs/006-parse-chunk-embed/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-hybrid-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-triage-routing/: data-model.md  implementation-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-report-drafting/: data-model.md  implementation-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-frontend/: data-model.md  design-system.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-arq-scheduling/: data-model.md  implementation-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-security-hardening/: data-model.md  implementation-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-delivery/: data-model.md  implementation-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py  conftest.py
tests/data/: guardrails_redteam.jsonl  redaction_golden_set.jsonl
tests/unit/: __init__.py  (+58 more)
worker/: __init__.py  worker.py
(+260 files in other folders)
