[project]
name = "pantera"
version = "0.1.0"
description = "Pantera — automated pharmacovigilance literature monitor (platform foundation)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "arq>=0.26",
    "hvac>=2.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "sentry-sdk[fastapi]>=2.19",
    "secure>=1.0",
    "slowapi>=0.1.9",
    "tenacity>=9.0",
    "fastapi-users[sqlalchemy]>=14.0",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "black>=24.10",
    "isort>=5.13",
    "mypy>=1.13",
    # For creating tiny ONNX fixture models in test conftest (not in serving image)
    "onnx>=1.14",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]
# Lean serving group for the modelserver container (self-contained; see D1/plan.md)
modelserver = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "onnxruntime>=1.18",
    "numpy>=1.26",
    "tokenizers>=0.20",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "hvac>=2.3",
    "secure>=1.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "pyyaml>=6.0",
]
# Offline training group — torch/transformers; NEVER in the serving image
training = [
    "torch>=2.0",
    "transformers>=4.40",
    "optimum[onnxruntime]>=1.20",
    "datasets>=2.18",
    "scikit-learn>=1.3",
    "skl2onnx>=1.16",
    "evaluate>=0.4",
    "jupyter>=1.0",
    "onnx>=1.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app", "worker", "modelserver"]
branch = true
# SQLAlchemy async bridges sync/async via greenlet; trace it so route bodies that resume
# after `await session...` are measured (else they read as uncovered).
concurrency = ["thread", "greenlet"]
# Operational scripts — not library code; manually invoked, not testable in CI
omit = ["modelserver/eval/bench.py"]

[tool.coverage.report]
show_missing = true
# Overall gate enforced in CI; audit DB-write path requires 95%+ (constitution).
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# modelserver is a standalone package; no FastAPI dependency-injection patterns there
"modelserver/**" = []

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I isort, ASYNC flake8-async (enforces FR-018 async correctness),
# B bugbear, UP pyupgrade.
select = ["E", "F", "I", "ASYNC", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses these call results as argument defaults (not B008).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
