[project]
name = "pantera"
version = "0.1.0"
description = "Pantera — automated pharmacovigilance literature monitor (platform foundation)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "arq>=0.26",
    "hvac>=2.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "sentry-sdk[fastapi]>=2.19",
    "secure>=1.0",
    "slowapi>=0.1.9",
    "tenacity>=9.0",
    "fastapi-users[sqlalchemy]>=14.0",
    "httpx>=0.28",
    "pgvector>=0.3",
    "lxml>=5.0",
    "tokenizers>=0.20",
    "scispacy>=0.5.4",
    "en_ner_bc5cdr_md @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_bc5cdr_md-0.5.4.tar.gz",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "langsmith>=0.1",
    # Spec 12: in-process PII/secret egress redaction (runs in the app + worker, not a container).
    # Presidio uses spaCy (thinc backend) — torch-free; en_core_web_sm pinned to the spaCy 3.7 line.
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "black>=24.10",
    "isort>=5.13",
    "mypy>=1.13",
    # For creating tiny ONNX fixture models in test conftest (not in serving image)
    "onnx>=1.21.0",  # >=1.21 clears the onnx 1.19.0 CVEs (path-traversal / TOCTOU on model load)
    "scikit-learn>=1.3",
    "joblib>=1.3",
]
# Lean serving group for the modelserver container (self-contained; see D1/plan.md)
modelserver = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "onnxruntime>=1.18",
    "numpy>=1.26",
    "tokenizers>=0.20",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "hvac>=2.3",
    "secure>=1.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "pyyaml>=6.0",
]
# Spec 12: lean serving group for the guardrails sidecar (heuristic rails; torch-free, no
# onnxruntime unless a classifier rail is later added — Constitution VI).
guardrails = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "hvac>=2.3",
    "secure>=1.0",
]
# Offline training group — torch/transformers; NEVER in the serving image
training = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.26",  # required by transformers Trainer (PyTorch backend)
    "optimum[onnxruntime]>=1.20",
    "datasets>=2.18",
    "scikit-learn>=1.3",
    "skl2onnx>=1.16",
    "evaluate>=0.4",
    "jupyter>=1.0",
    "onnx>=1.21.0",  # >=1.21 clears the onnx 1.19.0 CVEs (path-traversal / TOCTOU on model load)
    "openai>=1.0",  # Candidate C (GPT-4o zero-shot) comparison baseline only
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: marks tests that require live services (DB/Redis/Vault); run with PANTERA_INTEGRATION=1",
]
# Safety net: no single test may block the run forever (a stalled external call once hung
# CI for an hour). On Linux/CI this uses SIGALRM and fails just the offending test (named,
# with a traceback) while the rest continue. Generous so legit slow boots aren't flaky.
timeout = 180

[tool.coverage.run]
source = ["app", "worker", "modelserver"]
branch = true
# SQLAlchemy async bridges sync/async via greenlet; trace it so route bodies that resume
# after `await session...` are measured (else they read as uncovered).
concurrency = ["thread", "greenlet"]
# Operational scripts — not library code; manually invoked, not testable in CI
omit = ["eval/classifier/bench.py"]

[tool.coverage.report]
show_missing = true
# Overall gate enforced in CI; audit DB-write path requires 95%+ (constitution).
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# modelserver is a standalone package; no FastAPI dependency-injection patterns there
"modelserver/**" = []
# guardrails sidecar is likewise standalone (spec 12)
"guardrails/**" = []

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I isort, ASYNC flake8-async (enforces FR-018 async correctness),
# B bugbear, UP pyupgrade.
select = ["E", "F", "I", "ASYNC", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses these call results as argument defaults (not B008).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
